Fix bad caret contrast in dark mode

--- a/Emulator/res/me/emu6502/emulator/ui/view/dark-style.css
+++ b/Emulator/res/me/emu6502/emulator/ui/view/dark-style.css
@@ -35,3 +35,7 @@
 .memory-label {
     -fx-font-weight: bold !important;
 }
+
+.code-area .caret {
+    -fx-stroke: #fdfdfd !important;
+}
